--- a/Views/index.html
+++ b/Views/index.html
@@ -23,8 +23,8 @@
                 <ul>
                     <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
                     <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
-                    <li><a href="/communities">Find a community</a></li>
-                    <li><a href="#">Page 3</a></li>
+                    <li><a id="communityLink" href="/communities">Find a community</a></li>
+                    <li><a href="#">About Us</a></li>
                     
 
                     <div class="loginSignUp">
@@ -36,7 +36,7 @@
                 </ul>
             </nav>
     
-            <div class="popularTags">
+            <div class="popularTags" id="trendingTags">
                 <h2 class="popularTagsTitle">Topics Trending:</h2>
                 <h2 class="trending"><i class="fa-solid fa-fire" style="color: #ff0000;"></i><a href="/A3">Join the A3 conversation </a></h2>
                 <h2 class="trending"><i class="fa-solid fa-fire" style="color: #ff0000;"></i><a href="/A6">Audi A6 the best sudan in the german market?</a> </h2>
