Added form validation for displaying error messages in case of blank fields trying to be submitted

--- a/Views/login.html
+++ b/Views/login.html
@@ -65,10 +65,11 @@
 
     </form>
 
+    <span id="errormessage"></span>
 
 
 </div>
-  
+<script src="sites.js/login.js"></script>  
 </body>
 
 </html>
