Created seperate JS files for frontend fetch functions for each get request for each of the community pages

--- a/Views/A4community.html
+++ b/Views/A4community.html
@@ -83,7 +83,7 @@
     </footer>
     
 
-    <script src="sites.js/fetch_data.js"></script>
+    <script src="sites.js/A4.js"></script>
     <script src="sites.js/header.js"></script>
 </body>
     
