Created form validation for register form to now allow succesfully avoid allowing users to add malformed data

--- a/Views/index.html
+++ b/Views/index.html
@@ -8,10 +8,13 @@
         <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="styles.css/general.css">
         <link rel="stylesheet" href="styles.css/index.css">
+
         
+        <script src="sites.js/header.js"></script>
         <link rel="stylesheet" href="styles.css/tablet.css">
         <link rel="stylesheet" href="styles.css/smallLaptops.css">
         <script src=sites.js/index.js defer></script>    
+        <!-- USED for icons -->
         <script src="https://kit.fontawesome.com/f991cdd751.js" crossorigin="anonymous"></script>
        
     
@@ -104,6 +107,6 @@
         
 
 
-        <script src="sites.js/header.js"></script>
+      
     </body>
 </html>
