--- a/public/styles.css/account.css
+++ b/public/styles.css/account.css
@@ -128,3 +128,14 @@
     font-size: 25px;
     font-family: sans-serif;
 }
+
+.loginForm .error-login
+{
+    text-align: center;
+    padding: 10px;
+    color: lightcoral;
+    position: relative;
+    top: 10px;
+    left: 324px ;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
