Added condition so that the delete button only shows for user who made that post

--- a/public/styles.css/individualCommunties.css
+++ b/public/styles.css/individualCommunties.css
@@ -172,6 +172,12 @@
     cursor: pointer;
 }
 
+.deleteButton
+{
+    background-color: red;
+    
+}
+
 .replyToPost form textarea
 {
     resize: none;
