Added media queries for Larger laptop screens

--- a/Views/A4community.html
+++ b/Views/A4community.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles.css/general.css">
     <link rel="stylesheet" href="styles.css/individualCommunties.css">
     <link rel="stylesheet" href="styles.css/smallLaptops.css">
+    <link rel="stylesheet" href="styles.css/largelaptops.css">
     <link rel="stylesheet" href="styles.css/tablet.css">
 </head>
 
