--- a/Views/Q8community.html
+++ b/Views/Q8community.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
 
-
 <head>
 
-<title>Q8 Community</title>
-<link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Q8 Community</title>
+    <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<meta name="author" content="Shivam Missar">
-<link rel="stylesheet" href="styles.css/general.css">
-<link rel="stylesheet" href="styles.css/individualCommunties.css">
-<link rel="stylesheet" href="styles.css/media.css">
-
-
-
+    <meta name="author" content="Shivam Missar">
+    <link rel="stylesheet" href="styles.css/general.css">
+    <link rel="stylesheet" href="styles.css/individualCommunties.css">
+    <link rel="stylesheet" href="styles.css/smallLaptops.css">
+    <link rel="stylesheet" href="styles.css/tablet.css">
 </head>
 
 
