--- a/Views/index.html
+++ b/Views/index.html
@@ -13,11 +13,13 @@
         
         <link rel="stylesheet" href="styles.css/tablet.css">
         <link rel="stylesheet" href="styles.css/smallLaptops.css">
+        <link rel="stylesheet" href="styles.css/largelaptops.css">
+
         <script src=sites.js/index.js defer></script>    
         <!-- USED for icons -->
         <script src="https://kit.fontawesome.com/f991cdd751.js" crossorigin="anonymous"></script>
        
-        <script src="sites.js/header.js"></script>
+        <script src="sites.js/header.js" defer></script>
     
     </head>
 
