--- a/Views/Q3community.html
+++ b/Views/Q3community.html
@@ -11,7 +11,8 @@
 <meta name="author" content="Shivam Missar">
 <link rel="stylesheet" href="styles.css/general.css">
 <link rel="stylesheet" href="styles.css/individualCommunties.css">
-<link rel="stylesheet" href="styles.css/media.css">
+<link rel="stylesheet" href="styles.css/smallLaptops.css">
+<link rel="stylesheet" href="styles.css/tablet.css">
 
 
 </head>
@@ -23,29 +24,25 @@
     <header>
         <nav>
             <ul>
-                <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
-                <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
+                <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li>
                 <li><a href="/communities">Find a community</a></li>
                 <li><a href="#">Page 3</a></li>
-                
-
                 <div class="loginSignUp">
                     <li id="loginLink"><a href="/login">Login</a></li>
                     <li id="registerLink"><a href="/register">Register</a></li>
                     <li id="manageAccountLink" style="display: none;"><a href="/manage-account">Manage Account</a></li>
-                    <li id="signOutLink" style="display: none;"><a href="/logout">Sign Out</a></li>
+                    <li id="signOutLink" style="display: none;"><a href="/signout">Sign Out</a></li>
                 </div>
             </ul>
         </nav>
-
-      
+        
     </header>
 
-<section class="Introduction">
-    <!-- https://www.audi-mediacenter.com/en/audi-rs-q3-sportback-12104-->
-<img src="/assets/q3hero.jpg">
-<h1><span class="changeTextColour">Audi</span> Q3 community</h1>
-</section>
+    <section class="Introduction">
+        <!-- https://www.audi-mediacenter.com/en/audi-rs-q3-sportback-12104-->
+        <img src="/assets/q3hero.jpg">
+        <h1><span class="changeTextColour">Audi</span> Q3 community</h1>
+    </section>
 
 
 <section class="Discussions">
@@ -85,13 +82,12 @@
     <p class="trademark">2024 Audi Forum Website &#174;</p>
 </footer>
 
-<script src="sites.js/Q3.js"></script>
+    <script src="sites.js/Q3.js"></script>
+    <script src="sites.js/communities.js"></script>
+    <script>
+        document.getElementById('modelType').value = getUrl();
+    </script>
 
-<script src="sites.js/communities.js"></script>
-<script>
-    document.getElementById('modelType').value = getUrl();
-</script>
-
-<script src="sites.js/header.js"></script>
-</body>
+        <script src="sites.js/header.js"></script>
+        </body>
 </html>
