--- a/Views/communities.html
+++ b/Views/communities.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles.css/smallLaptops.css">
     <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css/community.css">
+    <link rel="stylesheet" href="styles.css/largelaptops.css">
 
 
 
