--- a/Views/manageaccounts.html
+++ b/Views/manageaccounts.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles.css/manageAccount.css">
     <link rel="stylesheet" href="styles.css/smallLaptops.css">
     <link rel="stylesheet" href="styles.css/tablet.css">
+    <link rel="stylesheet" href="styles.css/largelaptops.css">
     <script src=sites.js/index.js defer></script>    
    
 
