--- a/public/styles.css/smallLaptops.css
+++ b/public/styles.css/smallLaptops.css
@@ -476,4 +476,23 @@
 
 
 
+.Introduction h1
+{
+    position: relative;
+    top: -600px;
+    float: left;
+    left: 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 50px;
+    font-weight: lighter;
+    background-color: white;
+    padding: 10px;
+    border: 3px solid black;
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.1));
+   
+    backdrop-filter: blur(10px);
+
+}
+
+
 }
