--- a/Views/login.html
+++ b/Views/login.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles.css/account.css">
     <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css/general.css">
+    <link rel="stylesheet" href="styles.css/account.css">
     <link rel="stylesheet" href="styles.css/smallLaptops.css">
     <link rel="stylesheet" href="styles.css/tablet.css">
 
@@ -54,21 +55,23 @@
         <div class="form-group">
             <label for="Username">Username</label>
             <input type="text" id="username" name="Username" required placeholder="John Doe">
+            <span class="error" id="errormessage-username"></span>
         </div>
        
         <div class="form-group">
             <label for="Password">Password</label>
             <input type="password" id="password" name="LoginPassword" required placeholder="**********">
+            <span class="error" id="errormessage-password"></span>
         </div>
 
         <button class="SubmitLogin" id="submitLoginCredientals">Submit</button>
     </form>
 
-    <span class="error-login" id="errormessage"></span>
+    
 
 
 </div>
-<!-- <script src="sites.js/login.js"></script>   -->
+<script src="sites.js/login.js"></script>  
 </body>
 
 </html>
