--- a/Views/register.html
+++ b/Views/register.html
@@ -6,19 +6,10 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-
-
-
-
-
-
     <link rel="stylesheet" href="styles.css/general.css"/>
     <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css/account.css">
-    <link rel="stylesheet" href="styles.css/smallLaptops.css">
-  
-
-    
+    <link rel="stylesheet" href="styles.css/smallLaptops.css">  
 </head>
 
 
@@ -57,26 +48,26 @@
         <div class="form-group">
             <label for="Username">Username</label>
             <input type="text" id="fullname" name="Username" required placeholder="Audifan123" autofocus autocomplete="on">
-            <span id="username_invalid"></span>
+            <span id="username_invalid" class="error"></span>
         </div>
 
         <div class="form-group">
             <label for="email">Email</label>
             <input type="text" id="email" name="Email" required placeholder="name@domain.com" autocomplete="on">
-            <span id="email_invalid"></span>
+            <span id="email_invalid"  class="error"></span>
         </div>
        
         <div class="form-group">
             <label for="regpassword">Password</label>
             <input type="password" id="regpassword" name="Password" required placeholder="********">
-            <span id="password_not_secure"></span>
+            <span id="password_not_secure" class="error"></span>
             
         </div>
 
         <div class="form-group">
             <label for="regpassword">Confirm Password</label>
             <input type="password" id="regpasswordconfirm"name="PasswordConfirm" required placeholder="********">
-            <span id="password_confirmed"></span>
+            <span id="password_confirmed"  class="error"></span>
         </div>
 
         <button class="SubmitRegister" id="submitRegCredientals">Submit</button>
