--- a/public/styles.css/account.css
+++ b/public/styles.css/account.css
@@ -129,13 +129,17 @@
     font-family: sans-serif;
 }
 
-.loginForm .error-login
+.error
 {
-    text-align: center;
-    padding: 10px;
-    color: lightcoral;
+    
+    padding: 15px;
+    margin-bottom: 4px;
+    font-size: 20px;
+    color: #ff3333; 
     position: relative;
-    top: 10px;
-    left: 324px ;
+    top: 2px;
+    width: 100%;
+    left: 14px ;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
