Edited the design of discussions and post view to make it look a more consistent with the design colours

--- a/Views/A4community.html
+++ b/Views/A4community.html
@@ -60,7 +60,7 @@
   
     <div id="discussionContainer" class="showPosts">
        
-        <div id="discussions"></div>
+        <div id="discussions" class="showDiscussions"></div>
     </div>
 
     <footer>
