--- a/public/styles.css/individualCommunties.css
+++ b/public/styles.css/individualCommunties.css
@@ -108,6 +108,11 @@
     width: 600px;
     margin-top: 100px;
 }
+.disccusionForm form button:hover
+{
+    background-color: darkgray;
+    color: white;
+}
 .showPosts 
 {
     background-color: black;
@@ -122,82 +127,117 @@
     left: 295px;
     font-size: 30px;
 }
-.discussion-topic
+.showDiscussions h3
 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 20px;
+   font-size: 30px;
+    text-align: center;
 }
-.discussion-description
+.showDiscussions .discussion-description
 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 20px;
+    font-size: 25px;
+    font-weight: 200;
 }
 
 .discussion-username
 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
+    margin-top: -20px;
 }
 
-
+.changeColour{color: red;}
 .discussion-reply
 {
     border: none;
     padding: 10px;
     background-color: #666;
     color: white;
+   
     cursor: pointer;
     display: none;
 }
-.discussion-delete
+.deleteDiscussionForm button
 {
     border: none;
     padding: 10px;
     background-color: red;
     color: white;
     cursor: pointer;
-    display: none;
+    padding: 10px;
+    font-size: 15px;
+    width: 200px;
+    margin: 1px;
+ 
 }
-
+.deleteDiscussionForm button:hover
+{
+    background-color: darkred;
+}
 .deleteDiscussionForm input
 {
     color: black;
 } 
-.deleteDiscussionForm button 
-{
-    background-color: red;
-    padding: 10px;
-    border: none;
-    color: white;
-    cursor: pointer;
-}
 
-.deleteButton
+
+.replyToPost h2
 {
-    background-color: red;
-    
+    font-size: 20px;
+    margin-left: 200px;
 }
 
 .replyToPost form textarea
 {
     resize: none;
     border: none;
-    width: 300px;
+    border-radius: 10px;
+    width: 500px;
     padding: 10px;
     height: 100px;
+  
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+ 
 }
+
+
 .replyToPost form button
 {
-    border: none;
+   
+    display: inline;
     padding: 10px;
     display: block;
     color: black;
     cursor: pointer;
+    width: 200px;
+    margin: 1px;
+   border: 2px solid white ;
+   background-color: black;
+   color: white;
+   
 }
 
 .replyToPost form button:hover
 {
-    background-color: #666;
+    border: 3px solid red;
+    color: white;
 }
 
+.reply-username
+{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+}
+
+.reply-message
+{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+}
 
