Added admin page with delete functionaility

--- a/Views/index.html
+++ b/Views/index.html
@@ -30,7 +30,7 @@
                     <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
                     <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
                     <li><a id="communityLink" href="/communities">Find a community</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a id="adminLink" href="/admin">Admin</a></li>
                     
 
                     <div class="loginSignUp">
