--- a/public/styles.css/smallLaptops.css
+++ b/public/styles.css/smallLaptops.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 1024px) and (max-width: 1366px) /*1024 * 811*/
+@media only screen and (min-width: 1024px) and (max-width: 1366px) 
 {
     header
     {
