Updated the navigation

--- a/Views/Q7community.html
+++ b/Views/Q7community.html
@@ -28,15 +28,15 @@
             <ul>
                 <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
                 <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
-                <li><a href="/communities">Find a community</a></li>
-                <li><a href="#">Page 3</a></li>
+                <li><a id="communityLink" href="/communities">Find a community</a></li>
+                <li><a id="adminLink" href="/admin">Admin</a></li>
                 
 
                 <div class="loginSignUp">
                     <li id="loginLink"><a href="/login">Login</a></li>
                     <li id="registerLink"><a href="/register">Register</a></li>
                     <li id="manageAccountLink" style="display: none;"><a href="/manage-account">Manage Account</a></li>
-                    <li id="signOutLink" style="display: none;"><a href="/logout">Sign Out</a></li>
+                    <li id="signOutLink" style="display: none;"><a href="/signout">Sign Out</a></li>
                 </div>
             </ul>
         </nav>
