--- a/Views/index.html
+++ b/Views/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="styles.css/tablet.css">
         <link rel="stylesheet" href="styles.css/smallLaptops.css">
         <link rel="stylesheet" href="styles.css/largelaptops.css">
+        <link rel="stylesheet" href="styles.css/monitor.css">
 
         <script src=sites.js/index.js defer></script>    
         <!-- USED for icons -->
@@ -74,17 +75,17 @@
             <div class="slide fade">
                 <!-- https://unsplash.com/photos/a-close-up-of-the-front-of-a-blue-car-D0q3jhw0tGE -->
                 <img src="assets/AudiA6.jpg" alt="This is the all new blue Audi RS6">
-                <div class="text">Audi A6 BLUE</div>
+                <div class="text">The all new Audi RS6</div>
             </div>
             <div class="slide fade">
                 <!-- https://unsplash.com/photos/a-black-car-parked-on-a-road-jFKH2XsRQC8 -->
-                <img src="assets/etronGT.jpg" alt=""> 
-                <div class="text">Caption</div>
+                <img src="assets/etronGT.jpg" alt="Shows a picture of the eTronGt"> 
+                <div class="text">All new eletric sports model known as the E-Tron GT</div>
             </div>
             <div class="slide fade">
                 <!-- https://unsplash.com/photos/a-person-holding-a-car-key-in-front-of-a-silver-car-tgUdTefRlSw -->
-                <img src="assets/rs7.jpg" alt="">
-                <div class="text">RS7</div>
+                <img src="assets/rs7.jpg" alt="Shows a picture of the RS7 model">
+                <div class="text">The all new super car killer </div>
             </div>            
         </div>
 
