--- a/public/styles.css/smallLaptops.css
+++ b/public/styles.css/smallLaptops.css
@@ -334,10 +334,10 @@
 }
 
 
-.disccusionForm form
+.Discussions .disccusionForm form
 {
     position: relative;
-    left: 180px;
+    left: 80px;
 
 }
 
