--- a/Views/manageaccounts.html
+++ b/Views/manageaccounts.html
@@ -24,8 +24,8 @@
             <ul>
                 <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
                 <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
-                <li><a href="/communities">Find a community</a></li>
-                <li><a href="#">Page 3</a></li>
+                <li><a id="communityLink" href="/communities">Find a community</a></li>
+                <li><a id="adminLink" href="/admin">Admin</a></li>
                 
 
                 <div class="loginSignUp">
