--- a/public/styles.css/tablet.css
+++ b/public/styles.css/tablet.css
@@ -351,10 +351,10 @@
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-weight: 300;
     }
-    .disccusionForm form
+    .Discussions .disccusionForm form
     {
         position: relative;
-        left: 80px;
+        left:70px;
     }
 
     .discussion-reply
@@ -364,6 +364,27 @@
         padding: 12px;
         background-color: #666;
     }
+
+    .Discussions .disccusionForm form button
+{
+    display: block;
+    cursor: pointer;
+    border: none;
+    padding: 14px;
+    font-size: 17px;
+    width: 600px;
+    margin-top: 100px;
+}
+.Discussions .disccusionForm form input 
+{
+    width: 600px;
+    text-align: center;
+    padding: 8px;
+    font-size: 18px;
+    border:none;
+    border-radius: 4px;
+    height: 25px;
+}
     .deleteDiscussionForm button
     {
         border: none;
