Individual communties were not successfully getting the discussions and replies so updated the code for them to now work successfully

--- a/Views/A1community.html
+++ b/Views/A1community.html
@@ -43,14 +43,14 @@
 <section class="Introduction">
     <!-- https://www.audi-mediacenter.com/en/audi-a1-sportback-8 -->
 <img src="assets/a1hero.jpg">
-<h1><span class="changeTextColour">Audi</span> A1 community</h1>
+<h1><span class="changeTextColour">Audi Community/</span> A1 community</h1>
 </section>
 
 
 
 
 <section class="Discussions">
-    <h2 class="changeTextColour">Discussions</h2>
+    <h2 class="changeTextColour">User Posts</h2>
     <button id="addPost" onclick="getForm()" class="disccusionButton">Start a discussion</button>
     <div class="disccusionForm" id="disccusionForm">
         <h4>Your Post</h1>
@@ -66,8 +66,8 @@
 </section>
 
 <div id="discussionContainer" class="showPosts">
-    <h2>User Posts</h2>
-    <div id="discussions"></div>
+       
+    <div id="discussions" class="showDiscussions"></div>
 </div>
 
 <footer>
