--- a/Views/A3community.html
+++ b/Views/A3community.html
@@ -45,7 +45,7 @@
 <section class="Introduction">
     <!-- https://www.audi-mediacenter.com/en/audi-rs-3-sportback-22-->
 <img src="assets/a3hero.jpg">
-<h1><span class="changeTextColour">Audi</span> A3 community</h1>
+<h1><span class="changeTextColour">Audi Community/</span> A3 community</h1>
 </section>
 
 
@@ -64,10 +64,9 @@
             </form>
     </div>
 </section>
-
 <div id="discussionContainer" class="showPosts">
-    <h2>User Posts</h2>
-    <div id="discussions"></div>
+       
+    <div id="discussions" class="showDiscussions"></div>
 </div>
 
 <footer>
