--- a/Views/A4community.html
+++ b/Views/A4community.html
@@ -38,7 +38,7 @@
 
     <section class="Introduction">
         <img src="assets/rs4hero.jpg">
-        <h1><span class="changeTextColour">Audi</span> A4 community</h1>
+        <h1><span class="changeTextColour">Audi Community/</span>A4 community</h1>
     </section>
 
     <section class="Discussions">
