--- a/Views/A5community.html
+++ b/Views/A5community.html
@@ -39,15 +39,13 @@
             </ul>
         </nav>
 
-        <div class="popularTags">
-            <h2>Tags will go here</h2>
-        </div>
+     
     </header>
 
 <section class="Introduction">
     <!-- https://www.audi-mediacenter.com/en/audi-rs-5-sportback-9942-->
 <img src="assets/a5hero.jpg">
-<h1><span class="changeTextColour">Audi</span> A5 community</h1>
+<h1><span class="changeTextColour">Audi Community/</span> A5 community</h1>
 </section>
 
 
@@ -67,6 +65,10 @@
     </div>
 </section>
 
+<div id="discussionContainer" class="showPosts">
+       
+    <div id="discussions" class="showDiscussions"></div>
+</div>
 
 <footer>
     <div class="bottom-footer">
