--- a/Views/A7community.html
+++ b/Views/A7community.html
@@ -44,7 +44,7 @@
 <section class="Introduction">
     <!-- https://www.audi-mediacenter.com/en/audi-rs-7-sportback-49-->
 <img src="assets/a7hero.jpg">
-<h1><span class="changeTextColour">Audi</span> A7 community</h1>
+<h1><span class="changeTextColour">Audi Community/</span> A7 community</h1>
 </section>
 
 
@@ -65,8 +65,8 @@
 </section>
 
 <div id="discussionContainer" class="showPosts">
-    <h2>User Posts</h2>
-    <div id="discussions"></div>
+       
+    <div id="discussions" class="showDiscussions"></div>
 </div>
 
 <footer>
