--- a/Views/A8community.html
+++ b/Views/A8community.html
@@ -41,7 +41,7 @@
 <section class="Introduction">
     <!-- https://www.audi-mediacenter.com/en/audi-a8-l-53-->
 <img src="assets/a8hero.jpg">
-<h1><span class="changeTextColour">Audi</span> A8 community</h1>
+<h1><span class="changeTextColour">Audi Community/</span> A8 community</h1>
 </section>
 
 <section class="Discussions">
@@ -61,8 +61,8 @@
 </section>
 
 <div id="discussionContainer" class="showPosts">
-    <h2>User Posts</h2>
-    <div id="discussions"></div>
+       
+    <div id="discussions" class="showDiscussions"></div>
 </div>
 
 <footer>
