--- a/Views/Q5community.html
+++ b/Views/Q5community.html
@@ -46,7 +46,7 @@
 <section class="Introduction">
     <!-- https://www.audi-mediacenter.com/en/audi-q5-sportback-13207-->
 <img src="assets/q5hero.jpg">
-<h1><span class="changeTextColour">Audi</span> Q5 community</h1>
+<h1><span class="changeTextColour">Audi Community/</span> Q5 community</h1>
 </section>
 
 
@@ -67,8 +67,8 @@
 </section>
 
 <div id="discussionContainer" class="showPosts">
-    <h2>User Posts</h2>
-    <div id="discussions"></div>
+       
+    <div id="discussions" class="showDiscussions"></div>
 </div>
 
 <footer>
