--- a/Views/index.html
+++ b/Views/index.html
@@ -14,12 +14,12 @@
         <link rel="stylesheet" href="styles.css/tablet.css">
         <link rel="stylesheet" href="styles.css/smallLaptops.css">
         <link rel="stylesheet" href="styles.css/largelaptops.css">
-        <link rel="stylesheet" href="styles.css/monitor.css">
+      
 
         <script src=sites.js/index.js defer></script>    
         <!-- USED for icons -->
         <script src="https://kit.fontawesome.com/f991cdd751.js" crossorigin="anonymous"></script>
-       
+        <script src="sites.js/user_preferences.js"></script>
         <script src="sites.js/header.js" defer></script>
     
     </head>
@@ -29,7 +29,7 @@
             <nav>
                 <ul>
                     <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
-                    <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
+                    <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings" class="active"></a></li> 
                     <li><a id="communityLink" href="/communities">Find a community</a></li>
                     <li><a id="adminLink" href="/admin">Admin</a></li>
                     
@@ -113,4 +113,5 @@
 
       
     </body>
+
 </html>
