--- a/Views/manageaccounts.html
+++ b/Views/manageaccounts.html
@@ -31,7 +31,7 @@
                 <div class="loginSignUp">
                     <li id="loginLink"><a href="/login">Login</a></li>
                     <li id="registerLink"><a href="/register">Register</a></li>
-                    <li id="manageAccountLink" style="display: none;"><a href="/manage-account">Manage Account</a></li>
+                    <li id="manageAccountLink" style="display: none;" class="active"><a href="/manage-account">Manage Account</a></li>
                     <li id="signOutLink" style="display: none;"><a href="/signout">Sign Out</a></li>
                 </div>
             </ul>
@@ -63,9 +63,10 @@
     
             <button class="SubmitRegister" id="">Submit</button>
         </form>
-    
-
     </div>
+
+
+   
     
 
 
