--- a/Views/Q3community.html
+++ b/Views/Q3community.html
@@ -44,7 +44,7 @@
     <section class="Introduction">
         <!-- https://www.audi-mediacenter.com/en/audi-rs-q3-sportback-12104-->
         <img src="/assets/q3hero.jpg">
-        <h1><span class="changeTextColour">Audi</span> Q3 community</h1>
+        <h1><span class="changeTextColour">Audi Community/</span> Q3 community</h1>
     </section>
 
 
@@ -65,8 +65,8 @@
 </section>
 
 <div id="discussionContainer" class="showPosts">
-    <h2>User Posts</h2>
-    <div id="discussions"></div>
+       
+    <div id="discussions" class="showDiscussions"></div>
 </div>
 
 <footer>
