--- a/Views/Q7community.html
+++ b/Views/Q7community.html
@@ -47,7 +47,7 @@
 <section class="Introduction">
     <!-- https://www.audi-mediacenter.com/en/audi-sq7-5477-->
 <img src="assets/q7hero.jpg">
-<h1><span class="changeTextColour">Audi</span> Q7 community</h1>
+<h1><span class="changeTextColour">Audi Community/</span> Q7 community</h1>
 </section>
 
 
@@ -69,8 +69,8 @@
 </section>
 
 <div id="discussionContainer" class="showPosts">
-    <h2>User Posts</h2>
-    <div id="discussions"></div>
+       
+    <div id="discussions" class="showDiscussions"></div>
 </div>
 
 <footer>
