--- a/Views/Q8community.html
+++ b/Views/Q8community.html
@@ -41,7 +41,7 @@
 <section class="Introduction">
     <!-- https://www.audi-mediacenter.com/en/audi-rs-q8-12372-->
 <img src="assets/q8hero.jpg">
-<h1><span class="changeTextColour">Audi</span> Q8 community</h1>
+<h1><span class="changeTextColour">Audi Community/</span> Q8 community</h1>
 </section>
 
 
@@ -62,8 +62,8 @@
 </section>
 
 <div id="discussionContainer" class="showPosts">
-    <h2>User Posts</h2>
-    <div id="discussions"></div>
+       
+    <div id="discussions" class="showDiscussions"></div>
 </div>
 
 <footer>
