--- a/Views/admincorner.html
+++ b/Views/admincorner.html
@@ -35,7 +35,7 @@
                 <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
                 <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
                 <li><a id="communityLink" href="/communities">Find a community</a></li>
-                <li><a id="adminLink" href="/admin">Admin</a></li>
+                <li><a id="adminLink" href="/admin" class="active">Admin</a></li>
                 
 
                 <div class="loginSignUp">
