--- a/Views/communities.html
+++ b/Views/communities.html
@@ -27,7 +27,7 @@
             <ul>
                 <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
                 <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
-                <li><a id="communityLink" href="/communities">Find a community</a></li>
+                <li><a id="communityLink" href="/communities" class="active">Find a community</a></li>
                 <li><a id="adminLink" href="/admin">Admin</a></li>
                 
 
