--- a/public/styles.css/manageAccount.css
+++ b/public/styles.css/manageAccount.css
@@ -24,7 +24,8 @@
 .update-container form input
 {
     border-radius: 10px ;
-    padding: 8px;
+    padding: 10px;
+    font-size: 18px;
     width: 500px;
     border: none;
 }
@@ -50,4 +51,8 @@
 .update-container form button:hover
 {
     background-color: darkgray;
+    color: white;
 }
+
+
+
