Finished design and implementation

--- a/Views/communities.html
+++ b/Views/communities.html
@@ -12,7 +12,10 @@
     <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css/community.css">
     <link rel="stylesheet" href="styles.css/largelaptops.css">
-
+  
+  
+    <script src="sites.js/header.js" defer></script>
+    
 
 
 </head>
@@ -22,13 +25,14 @@
 
 
     <header>
+        
 
         <nav>
             <ul>
                 <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
                 <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
                 <li><a id="communityLink" href="/communities" class="active">Find a community</a></li>
-                <li><a id="adminLink" href="/admin">Admin</a></li>
+           
                 
 
                 <div class="loginSignUp">
@@ -158,4 +162,3 @@
 
 
 </html>
-<script src="sites.js/header.js"></script>
