--- a/Views/index.html
+++ b/Views/index.html
@@ -19,7 +19,7 @@
         <script src=sites.js/index.js defer></script>    
         <!-- USED for icons -->
         <script src="https://kit.fontawesome.com/f991cdd751.js" crossorigin="anonymous"></script>
-        <script src="sites.js/user_preferences.js"></script>
+     
         <script src="sites.js/header.js" defer></script>
     
     </head>
@@ -58,7 +58,7 @@
            
             <h2>Find a <span class="changeTextColour"> community </span> best suited to <span class="changeTextColour"> you </span></h2>
             <img src="assets/audiLogo.png" alt="This is the audi logo which shows 4 rings">
-            <a href="communities.html">Join a community</a>
+            <a href="/login">Join a community</a>
 
         </div>
         <div class="intro">
