--- a/Views/login.html
+++ b/Views/login.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles.css/account.css">
     <link rel="stylesheet" href="styles.css/smallLaptops.css">
     <link rel="stylesheet" href="styles.css/tablet.css">
-
+    <script src="sites.js/header.js" defer></script>
 </head>
 
 
@@ -24,27 +24,23 @@
 
     <header>
 
-        < <nav>
+        <nav>
             <ul>
                 <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
                 <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
-                <li><a href="/communities">Find a community</a></li>
-                <li><a href="#">Page 3</a></li>
+              
+
                 
 
                 <div class="loginSignUp">
-                        <li><a href="/login">Login</a></li>
-                        <li><a href="/register">Register</a></li>
-                        <div id="manageAccount" style="display: none;">
-                            <li><a href="/Views/manage-account.html">Manage Account</a></li>
-                        </div>
+                    <li id="loginLink"><a href="/login">Login</a></li>
+                    <li id="registerLink"><a href="/register">Register</a></li>
+
+                
                 </div>
             </ul>
         </nav>
 
-        <div class="popularTags">
-            <h2>Tags will go here</h2>
-        </div>
     </header>
 
 
@@ -72,7 +68,8 @@
 
 
 </div>
-<script src="sites.js/login.js"></script>  
+<script src="sites.js/login.js"></script> 
+
 </body>
 
 </html>
